snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/error-0.1.0-20210817.095327-2-sources.jar.sha1
8dcb94b176f08bf30002bb4eb67a6adcab4eb6f9